--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,8 @@
 /src/ffcv_pl.egg-info/
+/.idea/.gitignore
+/.idea/ffcv_pl.iml
+/.idea/misc.xml
+/.idea/modules.xml
+/.idea/inspectionProfiles/profiles_settings.xml
+/.idea/inspectionProfiles/Project_Default.xml
+/.idea/vcs.xml
