--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@
 /.idea/inspectionProfiles/profiles_settings.xml
 /.idea/inspectionProfiles/Project_Default.xml
 /.idea/vcs.xml
+/src/build/
+/src/dist/
