--- a/environment.yml
+++ b/environment.yml
@@ -5,7 +5,7 @@ channels:
   - nvidia
   - defaults
 dependencies:
-  - pytorch-cuda>=11.7
+  - pytorch-cuda=11.8
   - torchaudio>=2.0.1
   - pytorch>=2.0.0
   - torchvision>=0.15.1
